--- a/public/login-form/index.html
+++ b/public/login-form/index.html
@@ -59,7 +59,8 @@
 							</button>
 						</div>
 					</div>
-					</div>
+
+					<div class="text-center p-t-10" id="registerButton"></div>
 				</form>
 			</div>
 		</div>
