--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -56,6 +56,10 @@
         </div>
     </section>
 
+    <section class="feature-section">
+        <div class="container" id="register"></div>
+    </section>
+
     <!-- Section Tugas yang dapat diinisiasi -->
     <section id="availableTasksSection" class="feature-section">
         <div class="container">
