--- a/public/login-form/register.html
+++ b/public/login-form/register.html
@@ -37,21 +37,21 @@
           <!-- Username -->
           <div class="wrap-input100 validate-input m-b-23">
             <span class="label-input100">Username</span>
-            <input class="input100" type="text" name="username" placeholder="Masukkan username" id="username">
+            <input class="input100" type="text" name="username" placeholder="Masukkan username" id="username" required>
             <span class="focus-input100" data-symbol="&#xf206;"></span>
           </div>
 
           <!-- Password -->
           <div class="wrap-input100 validate-input m-b-23">
             <span class="label-input100">Password</span>
-            <input class="input100" type="password" name="password" placeholder="Masukkan password" id="password">
+            <input class="input100" type="password" name="password" placeholder="Masukkan password" id="password" required>
             <span class="focus-input100" data-symbol="&#xf190;"></span>
           </div>
 
           <!-- Konfirmasi Password -->
           <div class="wrap-input100 validate-input m-b-23">
             <span class="label-input100">Konfirmasi Password</span>
-            <input class="input100" type="password" name="confirmPassword" placeholder="Konfirmasi password" id="confirmPassword">
+            <input class="input100" type="password" name="confirmPassword" placeholder="Konfirmasi password" id="confirmPassword" required>
             <span class="focus-input100" data-symbol="&#xf190;"></span>
             <small id="passwordMatchMessage" class="text-danger"></small> 
           </div>
@@ -66,7 +66,7 @@
           <!-- Nama Lengkap -->
           <div class="wrap-input100 validate-input m-b-23">
             <span class="label-input100">Nama Lengkap</span>
-            <input class="input100" type="text" name="namaLengkap" placeholder="Masukkan nama lengkap" id="namaLengkap">
+            <input class="input100" type="text" name="namaLengkap" placeholder="Masukkan nama lengkap" id="namaLengkap" required>
             <span class="focus-input100" data-symbol="&#xf2bd;"></span>
           </div>
 
