menonaktifkan fungsi pdf viewer

--- a/public/dashboard/profile/profile.html
+++ b/public/dashboard/profile/profile.html
@@ -73,13 +73,13 @@
   </div>
 
   <!-- PDF Viewer -->
-  <div id="controls">
+  <!-- <div id="controls">
     <button id="prev-page">Previous</button>
     <button id="next-page">Next</button>
     <span>Halaman: <span id="page-num"></span> / <span id="page-count"></span></span>
   </div>
   
-  <canvas id="pdf-canvas"></canvas>
+  <canvas id="pdf-canvas"></canvas> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.13.216/pdf.min.js"></script>
   <script src="profile.js"></script>
