memindahkan beberapa input untuk registrasi ke dalam profile, yang sebelumnya terletak di halaman register. dan juga menambahkan semua fungsinya ke controller dan user model

--- a/public/dashboard/profile/profile.html
+++ b/public/dashboard/profile/profile.html
@@ -66,7 +66,74 @@
           <label for="editFotoProfile">Foto Profil:</label>
           <input type="file" id="editFotoProfile" name="fotoProfile" accept="image/*">
         </div>
-        
+        <div class="form-group">
+          <label for="editTempatTanggalLahir">Tempat Tanggal Lahir:</label>
+          <input type="text" id="editTempatTanggalLahir" name="tempatTanggalLahir" placeholder="contoh: siak, 11 November 1999">
+        </div>
+        <div class="form-group">
+          <label for="editAlamat">Alamat:</label>
+          <input type="text" id="editAlamat" name="alamat">
+        </div>
+        <div class="form-group">
+          <label for="editNik">Nik:</label>
+          <input type="text" id="editNik" name="nik">
+        </div>
+        <div class="form-group">
+          <label for="editNip">Nip:</label>
+          <input type="text" id="editNip" name="nip">
+        </div>
+        <div class="form-group">
+          <label for="editPangkat">Pangkat:</label>
+          <input type="text" id="editPangkat" name="pangkat">
+        </div>
+        <div class="form-group">
+          <label for="editRuang">Ruang:</label>
+          <input type="text" id="editRuang" name="Ruang">
+        </div>
+        <div class="form-group">
+          <label for="editLevelPk">Level PK:</label>
+          <input type="text" id="editLevelPk" name="levelPk">
+        </div>
+        <div class="form-group">
+          <label for="editUnitKerja">Unit Kerja:</label>
+          <input type="text" id="editUnitKerja" name="unitKerja">
+        </div>
+        <div class="form-group">
+          <label for="editPendidikan">Pendidikan:</label>
+          <input type="text" id="editPendidikan" name="pendidikan">
+        </div>
+        <div class="form-group">
+          <label for="editNoStr">No STR:</label>
+          <input type="text" id="editNoStr" name="noStr">
+        </div>
+        <div class="form-group">
+          <label for="editAkhirStr">Expired STR:</label>
+          <input type="text" id="editAkhirStr" name="akhirStr">
+        </div>
+        <div class="form-group">
+          <label for="editFileStr">File STR:</label>
+          <input type="text" id="editFileStr" name="fileStr">
+        </div>
+        <div class="form-group">
+          <label for="editNoSipp">No SIPP:</label>
+          <input type="text" id="editNoSipp" name="noSipp">
+        </div>
+        <div class="form-group">
+          <label for="editAkhirSipp">Expired SIPP:</label>
+          <input type="text" id="editAkhirSipp" name="akhirSipp">
+        </div>
+        <div class="form-group">
+          <label for="editFileSipp">File SIPP:</label>
+          <input type="text" id="editFileSipp" name="fileSipp">
+        </div>
+        <div class="form-group">
+          <label for="editKredensial">Kredensial:</label>
+          <input type="text" id="editKredensial" name="kredensial">
+        </div>
+        <div class="form-group">
+          <label for="editJenisKetenagaan">Jenis Ketenagaan:</label>
+          <input type="text" id="editJenisKetenagaan" name="jenisKetenagaan">
+        </div>
         <button type="submit" class="submitBtn">Simpan Perubahan</button>
         <button type="button" id="cancelBtn">Batal</button>
       </form>
