--- a/public/dashboard/user.html
+++ b/public/dashboard/user.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Daftar Pengguna</h1>
+        <h1>Daftar User</h1>
 
         <!-- Input untuk pencarian -->
         <div class="search-container">
@@ -35,7 +35,10 @@
                         <th>Unit Kerja</th>
                         <th>Pendidikan</th>
                         <th>No STR</th>
+                        <th>Expired STR</th>
                         <th>No SIPP</th>
+                        <th>Expired SIPP</th>
+                        <th>File SIPP</th>
                         <th>Kredensial</th>
                         <th>Jenis Ketenagaan</th>
                         <th>Aksi</th>
