menghilangkan fungsi cors agar server dapat berjalan di 1 serverr saja

--- a/public/dashboard/profile/profile.html
+++ b/public/dashboard/profile/profile.html
@@ -108,7 +108,7 @@
         </div>
         <div class="form-group">
           <label for="editAkhirStr">Expired STR:</label>
-          <input type="text" id="editAkhirStr" name="akhirStr">
+          <input type="text" id="editExpiredStr" name="akhirStr">
         </div>
         <div class="form-group">
           <label for="editFileStr">File STR:</label>
@@ -120,7 +120,7 @@
         </div>
         <div class="form-group">
           <label for="editAkhirSipp">Expired SIPP:</label>
-          <input type="text" id="editAkhirSipp" name="akhirSipp">
+          <input type="text" id="editExpiredSipp" name="akhirSipp">
         </div>
         <div class="form-group">
           <label for="editFileSipp">File SIPP:</label>
