menghilangkan tabel kredensial dan unit kerja lalu memperbaiki tampilan halaman utama untuk mobile device

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -50,8 +50,8 @@
     <section class="container">
         <div class="row">
             <div class="col-md-8 col-lg-6 col-xl-5">
-                <h2>Selamat Datang, <span id="username" style="color: #3b9ac5;">Loading...</span></h2>
-                <h3>Sebagai <span id="role">Loading...</span></h3>
+                <h2 style="color: #767676;">Selamat Datang, <span id="username" style="color: #3b9ac5;">Loading...</span></h2>
+                <h3 style="color: #767676;">Sebagai <span id="role">Loading...</span></h3>
             </div>
         </div>
     </section>
