--- a/public/index.html
+++ b/public/index.html
@@ -37,17 +37,21 @@
         </div>	
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container">
+                <div class="container container-logo">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h"><img src="img/kabsiak.png" alt=""></a>
-                    <a class="navbar-brand logo_h"><img src="img/logo-rsud.png" alt=""></a>
-                    <a class="navbar-brand logo_h"><img src="img/ppni.png" alt=""></a>
-                    <a class="navbar-brand logo_h"><img src="img/ibi.png" alt=""></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+                    <div style="margin-left: 3px;">
+                        <a class="navbar-brand logo_h" style="margin-left: 7px;"><img src="img/kabsiak.png" alt=""></a>
+                        <a class="navbar-brand logo_h" style="margin-left: 7px;"><img src="img/logo-rsud.png" alt=""></a>
+                        <a class="navbar-brand logo_h" style="margin-left: 7px;"><img src="img/ppni.png" alt=""></a>
+                        <a class="navbar-brand logo_h" style="margin-left: 7px;"><img src="img/ibi.png" alt=""></a>
+                    </div>
+                    <div>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto">
