--- a/public/login-form/register.html
+++ b/public/login-form/register.html
@@ -67,7 +67,7 @@
           <div class="wrap-input100 validate-input m-b-23">
             <span class="label-input100">Nama Lengkap</span>
             <input class="input100" type="text" name="namaLengkap" placeholder="Masukkan nama lengkap" id="namaLengkap" required>
-            <span class="focus-input100" data-symbol="&#xf2bd;"></span>
+            <span class="focus-input100" data-symbol="&#xf206;"></span>
           </div>
 
           <!-- Tempat, Tanggal Lahir -->
