--- a/public/dashboard/profile/profile.html
+++ b/public/dashboard/profile/profile.html
@@ -48,7 +48,7 @@
       </div>
       <div class="profile-detail">
         <span class="detail-label">Tempat Tanggal Lahir:</span>
-        <span class="detail-value" id="tempatTamggalLahir"> </span>
+        <span class="detail-value" id="tempatTanggalLahir"> </span>
       </div>
       <div class="profile-detail">
         <span class="detail-label">Alamat:</span>
@@ -108,7 +108,7 @@
         </div>
         <div class="form-group">
           <label for="editNamaLengkap">Nama Lengkap:</label>
-          <input type="text" id="editNamaLengkap" name="namaLengkap" placeholder="isi nama lengkap anda" required>
+          <input type="text" id="editNamaLengkap" name="namaLengkap" placeholder="isi nama lengkap anda">
         </div>
         <div class="form-group">
           <label for="editFotoProfile">Foto Profil:</label>
@@ -151,8 +151,8 @@
           <input type="text" id="editNoStr" name="noStr" placeholder="isi no str anda">
         </div>
         <div class="form-group">
-          <label for="editAkhirStr">Expired STR:</label>
-          <input type="text" id="editExpiredStr" name="akhirStr" placeholder="isi tanggal berakhir str anda">
+          <label for="editExpiredStr">Expired STR:</label>
+          <input type="text" id="editExpiredStr" name="expiredStr" placeholder="isi tanggal berakhir str anda">
         </div>
         <div class="form-group">
           <label for="editFileStr">File STR:</label>
@@ -163,8 +163,8 @@
           <input type="text" id="editNoSipp" name="noSipp" placeholder="isi no sipp anda">
         </div>
         <div class="form-group">
-          <label for="editAkhirSipp">Expired SIPP:</label>
-          <input type="text" id="editExpiredSipp" name="akhirSipp" placeholder="isi tanggal berakhir sipp anda">
+          <label for="editExpiredSipp">Expired SIPP:</label>
+          <input type="text" id="editExpiredSipp" name="expiredSipp" placeholder="isi tanggal berakhir sipp anda">
         </div>
         <div class="form-group">
           <label for="editFileSipp">File SIPP:</label>
