--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                             <li class="nav-item submenu dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tentang Kami</a>
                                 <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="blog.html">Profil Bidang</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="bagan.html">Profil Bidang</a></li>
                                     <li class="nav-item"><a class="nav-link" href="single-blog.html">Profil Komite</a></li>
                                 </ul>
                             </li>
