--- a/public/login-form/register.html
+++ b/public/login-form/register.html
@@ -40,35 +40,46 @@
             <input class="input100" type="text" name="username" placeholder="Masukkan username" id="username" required>
             <span class="focus-input100" data-symbol="&#xf206;"></span>
           </div>
-
-          <!-- Password -->
-          <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Password</span>
-            <input class="input100" type="password" name="password" placeholder="Masukkan password" id="password" required>
-            <span class="focus-input100" data-symbol="&#xf190;"></span>
-          </div>
-
-          <!-- Konfirmasi Password -->
-          <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Konfirmasi Password</span>
-            <input class="input100" type="password" name="confirmPassword" placeholder="Konfirmasi password" id="confirmPassword" required>
-            <span class="focus-input100" data-symbol="&#xf190;"></span>
-            <small id="passwordMatchMessage" class="text-danger"></small> 
-          </div>
-
-          <!-- Role -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Role</span>
-            <input class="input100" type="text" name="role" placeholder="Masukkan role" id="inputRole">
-            <span class="focus-input100" data-symbol="&#xf0c0;"></span>
-          </div> -->
-
+          
           <!-- Nama Lengkap -->
           <div class="wrap-input100 validate-input m-b-23">
             <span class="label-input100">Nama Lengkap</span>
             <input class="input100" type="text" name="namaLengkap" placeholder="Masukkan nama lengkap" id="namaLengkap" required>
             <span class="focus-input100" data-symbol="&#xf206;"></span>
           </div>
+
+          <!-- FIELD ROLE -->
+          <div id="roleFieldWrapper" class="wrap-input100 validate-input m-b-23" style="display: none;">
+            <span class="label-input100">Role</span>
+            <select class="input100" name="role" id="inputRole">
+              <option value="" disabled selected>Pilih role</option>
+              <option value="DIREKTUR">DIREKTUR</option>
+              <option value="KEPALA BIDANG">KEPALA BIDANG</option>
+              <option value="ADMIN">ADMIN</option>
+              <option value="STAFF">STAFF</option>
+            </select>
+            <span class="focus-input100" data-symbol="&#xf0c0;"></span>
+          </div>
+
+
+
+          <!-- Password -->
+          <div class="wrap-input100 validate-input m-b-23">
+            <span class="label-input100">Password</span>
+            <input class="input100" type="password" name="password" placeholder="Masukkan password" autocomplete="new-password" id="password" required>
+            <span class="focus-input100" data-symbol="&#xf190;"></span>
+          </div>
+
+          <!-- Konfirmasi Password -->
+          <div class="wrap-input100 validate-input m-b-23">
+            <span class="label-input100">Konfirmasi Password</span>
+            <input class="input100" type="password" name="confirmPassword" placeholder="Konfirmasi password" autocomplete="username" id="confirmPassword" required>
+            <span class="focus-input100" data-symbol="&#xf190;"></span>
+            <small id="passwordMatchMessage" class="text-danger"></small> 
+          </div>
+
+
+
 
           <!-- Tempat, Tanggal Lahir -->
           <!-- <div class="wrap-input100 validate-input m-b-23">
@@ -171,11 +182,13 @@
             </div>
           </div>
 
+
         </form>
       </div>
     </div>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
   <script src="vendor/animsition/js/animsition.min.js"></script>
   <script src="vendor/bootstrap/js/popper.js"></script>
@@ -184,7 +197,6 @@
   <script src="vendor/daterangepicker/moment.min.js"></script>
   <script src="vendor/daterangepicker/daterangepicker.js"></script>
   <script src="vendor/countdowntime/countdowntime.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/register.js"></script>
+  <script src="../auth.js"></script>
 </body>
 </html>
