--- a/public/dashboard/user.html
+++ b/public/dashboard/user.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar Pengguna</title>
     <link rel="stylesheet" href="css/user.css">
+    <link rel="icon" href="img/logo-rsud.png" type="image/png">
 </head>
 <body>
     <div class="container">
@@ -35,6 +36,7 @@
                         <th>Pendidikan</th>
                         <th>No STR</th>
                         <th>Expired STR</th>
+                        <th>File STR</th>
                         <th>No SIPP</th>
                         <th>Expired SIPP</th>
                         <th>File SIPP</th>
