--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -91,9 +91,9 @@
             <h3>Tugas Anda</h3>
             <div id="tasksList" class="row"></div>
             <hr>
-            <h3>Tugas Admin</h3>
+            <!-- <h3>Tugas Admin</h3> -->
             <div id="verifList" class="row"></div>
-            <h3>Tugas yang Anda inisiasi</h3>
+            <h3>Tugas yang anda ajukan</h3>
             <div class="table-responsive">
             <table id="initiatedTasksTable" class="table table-hover">
                 <thead>
@@ -114,11 +114,11 @@
     <!-- Section Tugas Recent (Selesai) -->
     <section class="feature-section">
         <div class="container">
-            <h3>Tugas Recent (Selesai)</h3>
+            <h3>Tugas Diselesaikan</h3>
             <div class="table-responsive">
             <table id="recentTasksTable" class="table table-striped table-hover">
                 <thead>
-                    <tr>
+                    <!-- <tr>
                     <th>No</th>
                     <th>Kode</th>
                     <th>Judul</th>
@@ -127,7 +127,7 @@
                     <th>User</th>
                     <th>Waktu</th>
                     <th>File</th>
-                    </tr>
+                    </tr> -->
                 </thead>
                 <tbody></tbody>
             </table>
@@ -148,13 +148,13 @@
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/dashboard.js"></script>
-    <script>
+    <!-- <script>
         $(document).ready(function () {
             setTimeout(function () {
                 var userRole = $('#role').text().trim().toLowerCase();
-                // var userName = $('#username').text().trim().toLowerCase();
+                var userName = $('#username').text().trim().toLowerCase();
 
-                // const telegramLink = document.getElementById('telegram-link');
+                const telegramLink = document.getElementById('telegram-link');
 
                 if (userRole === 'Staff') {
                     alert('masuk ke if');
@@ -164,18 +164,18 @@
                     $("#recentTasksTable thead th:nth-child(6), #recentTasksTable tbody td:nth-child(6)").hide();
                 }
 
-                // if (userRole !== 'super admin') {
-                //     $('#register').hide();
-                //     $('#verifList').prev('h3').hide();
-                //     $('#verifList').hide();
-                // }
+                if (userRole !== 'super admin') {
+                    $('#register').hide();
+                    $('#verifList').prev('h3').hide();
+                    $('#verifList').hide();
+                }
 
-                // telegramLink.href = "https://t.me/rsudtr_bot?start=link:" + userName;
+                telegramLink.href = "https://t.me/rsudtr_bot?start=link:" + userName;
             }, 500);
         });
 
 
-    </script>
+    </script> -->
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-messaging-compat.js"></script>
