--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -147,6 +147,7 @@
     <script src="js/jquery.form.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/theme.js"></script>
+    <script src="../api.js"></script>
     <script src="js/dashboard.js"></script>
     <!-- <script>
         $(document).ready(function () {
