--- a/public/dashboard/logbook.html
+++ b/public/dashboard/logbook.html
@@ -92,6 +92,7 @@
 
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="../api.js"></script>
   <script src="js/logbook.js"></script>
 </body>
 </html>
