--- a/public/dashboard/profile/profile.html
+++ b/public/dashboard/profile/profile.html
@@ -191,6 +191,7 @@
   <canvas id="pdf-canvas"></canvas> -->
 
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.13.216/pdf.min.js"></script> -->
+   <script src="../../api.js"></script>
   <script src="profile.js"></script>
 </body>
 </html>
