--- a/public/dashboard/user.html
+++ b/public/dashboard/user.html
@@ -106,7 +106,7 @@
             </form>
         </div>
     </div>
-
+    <script src="../api.js"></script>
     <script src="js/user.js"></script>
 </body>
 </html>
