--- a/public/login-form/index.html
+++ b/public/login-form/index.html
@@ -84,6 +84,7 @@
 <!--===============================================================================================-->
 	<script src="vendor/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
+	<script src="../api.js"></script>
 	<script src="../auth.js"></script>
 
 	<script>
