--- a/public/login-form/register.html
+++ b/public/login-form/register.html
@@ -209,6 +209,7 @@
   <script src="vendor/daterangepicker/moment.min.js"></script>
   <script src="vendor/daterangepicker/daterangepicker.js"></script>
   <script src="vendor/countdowntime/countdowntime.js"></script>
+  <script src="../api.js"></script>
   <script src="../auth.js"></script>
 
   <script>
