memperbaiki fungsi download logbook yang menghasilkan file halusinasi

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -92,7 +92,7 @@
             <div id="tasksList" class="row"></div>
             <hr>
             <!-- <h3>Tugas Admin</h3> -->
-            <div id="verifList" class="row"></div>
+            <div id="verifList"></div>
             <h3>Tugas yang anda ajukan</h3>
             <div class="table-responsive">
             <table id="initiatedTasksTable" class="table table-hover">
