testing + memperbaiki error hasil testing meliputi : penanganan error ketika user tidak sesuai atau tidak terdaftar, menambahkan peringatan error ketika user memasukkan file yang tidak sesuai atau file terlalu besar, memperbaiki file yang tidak berlanjut ketika user setuju tanpa file, menambahkan sistem tolak yang langsung mengarah ke user yang mengirim tugas

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -80,7 +80,7 @@
             <div id="tasksList" class="row"></div>
             <hr>
             <!-- <h3>Tugas Admin</h3> -->
-            <div id="verifList"></div>
+            <div id="verifList" class="row"></div>
             <h3>Tugas yang anda ajukan</h3>
             <div class="table-responsive">
             <table id="initiatedTasksTable" class="table table-hover">
