--- a/public/dashboard/profile/profile.html
+++ b/public/dashboard/profile/profile.html
@@ -43,10 +43,10 @@
         <span class="detail-label">Level PK/BK:</span>
         <span class="detail-value" id="levelPk"> </span>
       </div>
-      <div class="profile-detail">
+      <!-- <div class="profile-detail">
         <span class="detail-label">Unit Kerja:</span>
         <span class="detail-value" id="unitKerja"> </span>
-      </div>
+      </div> -->
       <div class="profile-detail">
         <span class="detail-label">Tempat Tanggal Lahir:</span>
         <span class="detail-value" id="tempatTanggalLahir"> </span>
@@ -59,10 +59,10 @@
         <span class="detail-label">Nik:</span>
         <span class="detail-value" id="nik"> </span>
       </div>
-      <div class="profile-detail">
+      <!-- <div class="profile-detail">
         <span class="detail-label">Ruang:</span>
         <span class="detail-value" id="ruang"> </span>
-      </div>
+      </div> -->
       <div class="profile-detail">
         <span class="detail-label">Pendidikan:</span>
         <span class="detail-value" id="pendidikan"> </span>
@@ -135,10 +135,10 @@
           <label for="editPangkat">Pangkat:</label>
           <input type="text" id="editPangkat" name="pangkat" placeholder="isi pangkat anda">
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="editRuang">Ruang:</label>
           <input type="text" id="editRuang" name="Ruang" placeholder="isi ruangan anda">
-        </div>
+        </div> -->
         <div class="form-group">
           <label for="editLevelPk">Level PK:</label>
           <input type="text" id="editLevelPk" name="levelPk" placeholder="isi level pk anda">
