memecah dashboard.js agar lebih mudah di baca

--- a/public/login-form/register.html
+++ b/public/login-form/register.html
@@ -23,6 +23,7 @@
   <!--===============================================================================================-->
   <link rel="stylesheet" type="text/css" href="css/util.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <!--===============================================================================================-->
 </head>
 <body>
@@ -68,7 +69,8 @@
                 <option value="Kepala Ruangan">Kepala Ruangan</option>
                 <option value="Staff">Staff</option>
               </select>
-              <span class="focus-input100" data-symbol="&#xf0c0;"></span>
+              <!-- <span class="focus-input100" data-symbol="&#xf0c0;"></span> -->
+               
             </div>
 
 
@@ -89,100 +91,6 @@
             <small id="passwordMatchMessage" class="text-danger"></small> 
 
           </div>
-
-
-
-
-          <!-- Tempat, Tanggal Lahir -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Tempat, Tanggal Lahir</span>
-            <input class="input100" type="text" name="tempat_tanggal_lahir" placeholder="Contoh: Jakarta, 01-01-1990" id="tempat_tanggal_lahir">
-            <span class="focus-input100" data-symbol="&#xf073;"></span>
-          </div> -->
-
-          <!-- Alamat -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Alamat</span>
-            <input class="input100" type="text" name="alamat" placeholder="Masukkan alamat" id="alamat">
-            <span class="focus-input100" data-symbol="&#xf015;"></span>
-          </div> -->
-
-          <!-- NIK -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">NIK</span>
-            <input class="input100" type="text" name="nik" placeholder="Masukkan NIK" id="nik">
-            <span class="focus-input100" data-symbol="&#xf007;"></span>
-          </div> -->
-
-          <!-- NIP -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">NIP</span>
-            <input class="input100" type="text" name="nip" placeholder="Masukkan NIP" id="nip">
-            <span class="focus-input100" data-symbol="&#xf007;"></span>
-          </div> -->
-
-          <!-- Pangkat -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Pangkat</span>
-            <input class="input100" type="text" name="pangkat" placeholder="Masukkan pangkat" id="pangkat">
-            <span class="focus-input100" data-symbol="&#xf0b1;"></span>
-          </div> -->
-
-          <!-- Ruang -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Ruang</span>
-            <input class="input100" type="text" name="ruang" placeholder="Masukkan ruang" id="ruang">
-            <span class="focus-input100" data-symbol="&#xf0c0;"></span>
-          </div> -->
-
-          <!-- Level PK -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Level PK</span>
-            <input class="input100" type="text" name="level_pk" placeholder="Masukkan level PK" id="level_pk">
-            <span class="focus-input100" data-symbol="&#xf108;"></span>
-          </div> -->
-
-          <!-- Unit Kerja -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Unit Kerja</span>
-            <input class="input100" type="text" name="unit_kerja" placeholder="Masukkan unit kerja" id="unit_kerja">
-            <span class="focus-input100" data-symbol="&#xf0c0;"></span>
-          </div> -->
-
-          <!-- Pendidikan -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Pendidikan</span>
-            <input class="input100" type="text" name="pendidikan" placeholder="Masukkan pendidikan" id="pendidikan">
-            <span class="focus-input100" data-symbol="&#xf19d;"></span>
-          </div> -->
-
-          <!-- No STR -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">No STR</span>
-            <input class="input100" type="text" name="no_str" placeholder="Masukkan no STR" id="no_str">
-            <span class="focus-input100" data-symbol="&#xf02e;"></span>
-          </div> -->
-
-          <!-- No SIPP -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">No SIPP</span>
-            <input class="input100" type="text" name="no_sipp" placeholder="Masukkan no SIPP" id="no_sipp">
-            <span class="focus-input100" data-symbol="&#xf02e;"></span>
-          </div> -->
-
-          <!-- Kredensial -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Kredensial</span>
-            <input class="input100" type="text" name="kredensial" placeholder="Masukkan kredensial" id="kredensial">
-            <span class="focus-input100" data-symbol="&#xf0c0;"></span>
-          </div> -->
-
-          <!-- Jenis Ketenagaan -->
-          <!-- <div class="wrap-input100 validate-input m-b-23">
-            <span class="label-input100">Jenis Ketenagaan</span>
-            <input class="input100" type="text" name="jenis_ketenagaan" placeholder="Masukkan jenis ketenagaan" id="jenis_ketenagaan">
-            <span class="focus-input100" data-symbol="&#xf02c;"></span>
-          </div> -->
 
           <!-- Submit Button -->
           <div class="container-login100-form-btn">
