--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -14,10 +14,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tableStyle.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.rtl.min.css" integrity="sha384-Xbg45MqvDIk1e563NLpGEulpX6AvL404DP+/iCgW9eFa2BqztiwTexswJo2jLMue" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header class="header_area shadow-sm">
-        <div class="top_menu row m0">
+        <!-- <div class="top_menu row m0">
             <div class="container">
                 <div class="float-left">
                     <a class="dn_btn" href="mailto:medical@example.com"><i class="ti-email"></i>keperawatan@gmail.com</a>
@@ -30,11 +33,16 @@
                     </ul>    
                 </div>
             </div>    
-        </div>    
+        </div>     -->
+        <div class="mb-5"></div>
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <div class="col-md-8 col-lg-6 col-xl-5">
+                        <h2 style="color: #767676;">Selamat Datang, <span id="username" style="color: #3b9ac5;">Loading...</span></h2>
+                        <h3 style="color: #767676;">Sebagai <span id="role">Loading...</span></h3>
+                    </div>
+                    <button class="navbar-toggler mt-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -49,9 +57,8 @@
 
     <section class="container">
         <div class="row">
-            <div class="col-md-8 col-lg-6 col-xl-5">
-                <h2 style="color: #767676;">Selamat Datang, <span id="username" style="color: #3b9ac5;">Loading...</span></h2>
-                <h3 style="color: #767676;">Sebagai <span id="role">Loading...</span></h3>
+            <div class="col-md-8 col-lg-6 col-xl-5" style="margin-top: 115px;">
+                <h2></h2>
             </div>
         </div>
     </section>
@@ -78,9 +85,8 @@
         <div class="container">
             <h4>Tugas Anda</h4>
             <div id="tasksList" class="row"></div>
-            <hr>
-            <!-- <h3>Tugas Admin</h3> -->
             <div id="verifList" class="row"></div>
+            <hr>
             <h3>Tugas yang anda ajukan</h3>
             <div class="table-responsive">
             <table id="initiatedTasksTable" class="table table-hover">
@@ -123,6 +129,52 @@
         </div>
     </section>
 
+    <!-- modal reset user pass -->
+    <div class="modal fade" id="modalResetUser" tabindex="-1" aria-labelledby="modalResetUserLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header ">
+            <h5 class="modal-title" style="color: black;" id="modalResetUserLabel">Ganti Password</h5>
+        </div>
+        <div class="modal-body">
+            <h4 style="color: black; font-family: 'Playfair Display', serif;">Masukkan Password lama</h4>
+            <input type="password" class="form-control mb-2" id="oldPasswordInput" placeholder="Password Lama" />
+            <h4 style="color: black; font-family: 'Playfair Display', serif;">Masukkan Password baru</h4>
+            <input type="password" class="form-control mb-2" id="newPasswordInput" placeholder="Password Baru" />
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="cancelResetUserBtn">Batal</button>
+            <button type="button" class="btn btn-primary" id="submitResetUserBtn">Simpan</button>
+        </div>
+        </div>
+    </div>
+    </div>
+
+
+    <!-- modal reset admin -->
+    <div class="modal fade" id="modalResetAdmin" tabindex="-1" aria-labelledby="modalResetAdminLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" style="color: black;" id="modalResetAdminLabel">Reset Password Pengguna</h5>
+        </div>
+        <div class="modal-body">
+            <h4 style="color: black; font-family: 'Playfair Display', serif;">Masukkan username</h4>
+            <input type="text" class="form-control mb-2" id="targetUsernameInput" placeholder="Username"/>
+            <h4 style="color: black; font-family: 'Playfair Display', serif;">Masukkan Password baru</h4>
+            <input type="password" class="form-control mb-2" id="adminNewPasswordInput" placeholder="Password Baru" />
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="cancelResetAdminBtn">Batal</button>
+            <button type="button" class="btn btn-danger" id="submitResetAdminBtn">Reset</button>
+        </div>
+        </div>
+    </div>
+    </div>
+
+
+
+
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -136,35 +188,8 @@
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/theme.js"></script>
     <script src="../api.js"></script>
-    <script src="js/dashboard.js"></script>
-    <!-- <script>
-        $(document).ready(function () {
-            setTimeout(function () {
-                var userRole = $('#role').text().trim().toLowerCase();
-                var userName = $('#username').text().trim().toLowerCase();
-
-                const telegramLink = document.getElementById('telegram-link');
-
-                if (userRole === 'Staff') {
-                    alert('masuk ke if');
-                    $("#recentTasksTable thead th:nth-child(6), #recentTasksTable tbody td:nth-child(6)").hide();
-                } else if (userRole === 'Kepala Ruangan') {
-                    alert('masuk ke else if');
-                    $("#recentTasksTable thead th:nth-child(6), #recentTasksTable tbody td:nth-child(6)").hide();
-                }
-
-                if (userRole !== 'super admin') {
-                    $('#register').hide();
-                    $('#verifList').prev('h3').hide();
-                    $('#verifList').hide();
-                }
-
-                telegramLink.href = "https://t.me/rsudtr_bot?start=link:" + userName;
-            }, 500);
-        });
-
-
-    </script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="js/dashboard.js"></script>
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-messaging-compat.js"></script>
