--- a/public/login-form/register.html
+++ b/public/login-form/register.html
@@ -80,6 +80,7 @@
               <span class="label-input100">Password</span>
               <input class="input100" type="password" name="password" placeholder="Masukkan password" autocomplete="new-password" id="password" required>
               <span class="focus-input100" data-symbol="&#xf190;"></span>
+              <span toggle="#password" class="fa fa-fw fa-eye field-icon toggle-password" style="position:absolute; top:55%; right:15px; cursor:pointer; display:none;"></span>
             </div>
 
             <!-- Konfirmasi Password -->
@@ -87,6 +88,7 @@
               <span class="label-input100">Konfirmasi Password</span>
               <input class="input100" type="password" name="confirmPassword" placeholder="Konfirmasi password" autocomplete="username" id="confirmPassword" required>
               <span class="focus-input100" data-symbol="&#xf190;"></span>
+              <span toggle="#passwordConfirm" class="fa fa-fw fa-eye field-icon toggle-password" style="position:absolute; top:55%; right:15px; cursor:pointer; display:none;"></span>
             </div>
             <small id="passwordMatchMessage" class="text-danger"></small> 
 
@@ -131,6 +133,32 @@
       } else {
         errorDiv.textContent = "";
       }
+    });
+
+    document.addEventListener('DOMContentLoaded', function () {
+			const togglePassword = document.querySelector('.toggle-password');
+			const passwordInput = document.querySelector('#password');
+
+			// Tampilkan/hidden ikon mata saat user mengetik
+			passwordInput.addEventListener('input', function () {
+				if (passwordInput.value.length > 0) {
+					togglePassword.style.display = 'block';
+				} else {
+					togglePassword.style.display = 'none';
+					// Reset ke mode tersembunyi saat kosong
+					passwordInput.setAttribute('type', 'password');
+					togglePassword.classList.remove('fa-eye-slash');
+					togglePassword.classList.add('fa-eye');
+				}
+			});
+
+			// Toggle icon dan tipe input
+			togglePassword.addEventListener('click', function () {
+				const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+				passwordInput.setAttribute('type', type);
+				this.classList.toggle('fa-eye');
+				this.classList.toggle('fa-eye-slash');
+			});
     });
   </script>
 </body>
